AWS deployment
Used terraform to deploy the inferastructure and application. Also expanded unit testing with total sitting at 366.