@@ -3,44 +3,64 @@ package com.rapidphotoflow.service;
 import com.rapidphotoflow.domain.EventType;
 import com.rapidphotoflow.domain.Photo;
 import com.rapidphotoflow.domain.PhotoStatus;
-import com.rapidphotoflow.repository.InMemoryPhotoRepository;
+import com.rapidphotoflow.entity.PhotoEntity;
+import com.rapidphotoflow.repository.PhotoRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.time.Instant;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class PhotoService {
 
-    private final InMemoryPhotoRepository photoRepository;
+    private final PhotoRepository photoRepository;
+    private final S3StorageService s3StorageService;
     private final EventService eventService;
 
+    @Transactional
     public List<Photo> uploadPhotos(List<MultipartFile> files) {
         List<Photo> uploadedPhotos = new ArrayList<>();
 
         for (MultipartFile file : files) {
             try {
-                Photo photo = Photo.createPending(
-                        file.getOriginalFilename(),
-                        file.getContentType(),
-                        file.getSize(),
-                        file.getBytes()
-                );
-                photoRepository.save(photo);
-                eventService.logEvent(photo.getId(), EventType.PHOTO_CREATED,
-                        "Photo uploaded: " + photo.getFilename());
-                uploadedPhotos.add(photo);
-                log.info("Photo uploaded: {} ({})", photo.getFilename(), photo.getId());
+                byte[] content = file.getBytes();
+                String contentHash = computeHash(content);
+                UUID photoId = UUID.randomUUID();
+                Instant now = Instant.now();
+
+                // Upload to S3
+                String s3Key = s3StorageService.uploadPhoto(photoId, content, file.getContentType());
+
+                // Save metadata to database
+                PhotoEntity entity = PhotoEntity.builder()
+                        .id(photoId)
+                        .filename(file.getOriginalFilename())
+                        .mimeType(file.getContentType())
+                        .sizeBytes(file.getSize())
+                        .contentHash(contentHash)
+                        .s3Key(s3Key)
+                        .status(PhotoStatus.PENDING)
+                        .uploadedAt(now)
+                        .updatedAt(now)
+                        .tags(new HashSet<>())
+                        .build();
+
+                photoRepository.save(entity);
+                eventService.logEvent(photoId, EventType.PHOTO_CREATED,
+                        "Photo uploaded: " + entity.getFilename());
+
+                uploadedPhotos.add(entityToPhoto(entity, null));
+                log.info("Photo uploaded: {} ({})", entity.getFilename(), photoId);
             } catch (IOException e) {
                 log.error("Failed to upload photo: {}", file.getOriginalFilename(), e);
             }
@@ -50,58 +70,100 @@ public class PhotoService {
     }
 
     public Optional<Photo> getPhotoById(UUID id) {
-        return photoRepository.findById(id);
+        return photoRepository.findById(id).map(e -> entityToPhoto(e, null));
+    }
+
+    public byte[] getPhotoContent(UUID id) {
+        return s3StorageService.downloadPhoto(id);
     }
 
     public List<Photo> getAllPhotos() {
-        return photoRepository.findAll();
+        return photoRepository.findAllByOrderByUploadedAtDesc().stream()
+                .map(e -> entityToPhoto(e, null))
+                .collect(Collectors.toList());
     }
 
     public List<Photo> getPhotosByStatus(PhotoStatus status) {
-        return photoRepository.findByStatus(status);
+        return photoRepository.findByStatusOrderByUploadedAtDesc(status).stream()
+                .map(e -> entityToPhoto(e, null))
+                .collect(Collectors.toList());
     }
 
     public List<Photo> getPhotosByStatuses(List<PhotoStatus> statuses) {
-        return photoRepository.findByStatusIn(statuses);
+        return photoRepository.findByStatusInOrderByUploadedAtDesc(statuses).stream()
+                .map(e -> entityToPhoto(e, null))
+                .collect(Collectors.toList());
     }
 
+    @Transactional
     public Photo approve(UUID photoId) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        photo.approve();
-        photoRepository.save(photo);
+        // Already approved - return without error (idempotent)
+        if (entity.getStatus() == PhotoStatus.APPROVED) {
+            return entityToPhoto(entity, null);
+        }
+
+        if (entity.getStatus() != PhotoStatus.PROCESSED && entity.getStatus() != PhotoStatus.REJECTED) {
+            throw new IllegalStateException("Can only approve from PROCESSED or REJECTED state");
+        }
+
+        entity.setStatus(PhotoStatus.APPROVED);
+        entity.setUpdatedAt(Instant.now());
+        photoRepository.save(entity);
+
         eventService.logEvent(photoId, EventType.APPROVED,
-                "Photo approved: " + photo.getFilename());
-        log.info("Photo approved: {} ({})", photo.getFilename(), photoId);
+                "Photo approved: " + entity.getFilename());
+        log.info("Photo approved: {} ({})", entity.getFilename(), photoId);
 
-        return photo;
+        return entityToPhoto(entity, null);
     }
 
+    @Transactional
     public Photo reject(UUID photoId) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        photo.reject();
-        photoRepository.save(photo);
-        eventService.logEvent(photoId, EventType.REJECTED,
-                "Photo rejected: " + photo.getFilename());
-        log.info("Photo rejected: {} ({})", photo.getFilename(), photoId);
+        // Already rejected - return without error (idempotent)
+        if (entity.getStatus() == PhotoStatus.REJECTED) {
+            return entityToPhoto(entity, null);
+        }
 
-        return photo;
+        if (entity.getStatus() != PhotoStatus.PROCESSED && entity.getStatus() != PhotoStatus.FAILED && entity.getStatus() != PhotoStatus.APPROVED) {
+            throw new IllegalStateException("Can only reject from PROCESSED, FAILED, or APPROVED state");
+        }
+
+        entity.setStatus(PhotoStatus.REJECTED);
+        entity.setUpdatedAt(Instant.now());
+        photoRepository.save(entity);
+
+        eventService.logEvent(photoId, EventType.REJECTED,
+                "Photo rejected: " + entity.getFilename());
+        log.info("Photo rejected: {} ({})", entity.getFilename(), photoId);
+
+        return entityToPhoto(entity, null);
     }
 
+    @Transactional
     public Photo retry(UUID photoId) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        photo.retry();
-        photoRepository.save(photo);
-        eventService.logEvent(photoId, EventType.RETRY_REQUESTED,
-                "Retry requested: " + photo.getFilename());
-        log.info("Photo retry requested: {} ({})", photo.getFilename(), photoId);
+        if (entity.getStatus() != PhotoStatus.FAILED) {
+            throw new IllegalStateException("Can only retry from FAILED state");
+        }
 
-        return photo;
+        entity.setStatus(PhotoStatus.PENDING);
+        entity.setFailureReason(null);
+        entity.setUpdatedAt(Instant.now());
+        photoRepository.save(entity);
+
+        eventService.logEvent(photoId, EventType.RETRY_REQUESTED,
+                "Retry requested: " + entity.getFilename());
+        log.info("Photo retry requested: {} ({})", entity.getFilename(), photoId);
+
+        return entityToPhoto(entity, null);
     }
 
     public long getPhotoCount() {
@@ -112,27 +174,73 @@ public class PhotoService {
         return photoRepository.countByStatus(status);
     }
 
+    @Transactional
     public void delete(UUID photoId) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        String filename = photo.getFilename();
-        eventService.logEvent(photoId, EventType.DELETED,
-                "Photo deleted: " + filename);
+        String filename = entity.getFilename();
+
+        // Delete from S3
+        s3StorageService.deletePhoto(photoId);
+
+        // Log event before deleting
+        eventService.logEvent(photoId, EventType.DELETED, "Photo deleted: " + filename);
+
+        // Delete from database
         photoRepository.deleteById(photoId);
         log.info("Photo deleted: {} ({})", filename, photoId);
     }
 
-    /**
-     * Returns a priority score for a photo status. Higher score = higher priority to keep.
-     * Priority order (highest to lowest):
-     * - APPROVED: User has approved this photo, always keep
-     * - PROCESSED: Ready for review
-     * - PROCESSING: Currently being processed
-     * - PENDING: Waiting to be processed
-     * - FAILED: Processing failed
-     * - REJECTED: User rejected this photo, lowest priority
-     */
+    @Transactional
+    public List<Photo> deleteDuplicates() {
+        List<PhotoEntity> allPhotos = photoRepository.findAllByOrderByUploadedAtDesc();
+        Map<String, PhotoEntity> bestByHash = new HashMap<>();
+        List<Photo> duplicates = new ArrayList<>();
+
+        // Find the best photo for each content hash based on status priority
+        for (PhotoEntity entity : allPhotos) {
+            String hash = entity.getContentHash();
+            if (hash == null) continue;
+
+            PhotoEntity existing = bestByHash.get(hash);
+
+            if (existing == null) {
+                bestByHash.put(hash, entity);
+            } else {
+                int currentPriority = getStatusPriority(entity.getStatus());
+                int existingPriority = getStatusPriority(existing.getStatus());
+
+                if (currentPriority > existingPriority) {
+                    bestByHash.put(hash, entity);
+                } else if (currentPriority == existingPriority) {
+                    if (entity.getUploadedAt().isBefore(existing.getUploadedAt())) {
+                        bestByHash.put(hash, entity);
+                    }
+                }
+            }
+        }
+
+        // Delete all photos that are not the "best" for their hash
+        for (PhotoEntity entity : allPhotos) {
+            String hash = entity.getContentHash();
+            if (hash == null) continue;
+
+            PhotoEntity best = bestByHash.get(hash);
+
+            if (!entity.getId().equals(best.getId())) {
+                duplicates.add(entityToPhoto(entity, null));
+                s3StorageService.deletePhoto(entity.getId());
+                eventService.logEvent(entity.getId(), EventType.DELETED,
+                        "Duplicate removed: " + entity.getFilename() + " (kept " + best.getStatus() + " version)");
+                photoRepository.deleteById(entity.getId());
+                log.info("Duplicate photo removed: {} ({})", entity.getFilename(), entity.getId());
+            }
+        }
+
+        return duplicates;
+    }
+
     private int getStatusPriority(PhotoStatus status) {
         return switch (status) {
             case APPROVED -> 6;
@@ -144,100 +252,75 @@ public class PhotoService {
         };
     }
 
-    public List<Photo> deleteDuplicates() {
-        List<Photo> allPhotos = photoRepository.findAll();
-        Map<String, Photo> bestByHash = new HashMap<>();
-        List<Photo> duplicates = new ArrayList<>();
-
-        // Ensure all photos have content hashes
-        for (Photo photo : allPhotos) {
-            if (photo.getContentHash() == null) {
-                String hash = Photo.computeHash(photo.getContent());
-                photo.setContentHash(hash);
-                photoRepository.save(photo);
-            }
-        }
-
-        // Find the best photo for each content hash based on status priority
-        // If same priority, keep the one uploaded first (oldest)
-        for (Photo photo : allPhotos) {
-            String hash = photo.getContentHash();
-            Photo existing = bestByHash.get(hash);
-
-            if (existing == null) {
-                bestByHash.put(hash, photo);
-            } else {
-                int currentPriority = getStatusPriority(photo.getStatus());
-                int existingPriority = getStatusPriority(existing.getStatus());
-
-                if (currentPriority > existingPriority) {
-                    // Current photo has higher priority - it becomes the one to keep
-                    bestByHash.put(hash, photo);
-                } else if (currentPriority == existingPriority) {
-                    // Same priority - keep the older one
-                    if (photo.getUploadedAt().isBefore(existing.getUploadedAt())) {
-                        bestByHash.put(hash, photo);
-                    }
-                }
-                // Otherwise, existing photo has higher priority - keep it
-            }
-        }
-
-        // Delete all photos that are not the "best" for their hash
-        for (Photo photo : allPhotos) {
-            String hash = photo.getContentHash();
-            Photo best = bestByHash.get(hash);
-
-            if (!photo.getId().equals(best.getId())) {
-                duplicates.add(photo);
-                eventService.logEvent(photo.getId(), EventType.DELETED,
-                        "Duplicate removed: " + photo.getFilename() + " (kept " + best.getStatus() + " version)");
-                photoRepository.deleteById(photo.getId());
-                log.info("Duplicate photo removed: {} ({}) [{}], kept {} ({}) [{}]",
-                        photo.getFilename(), photo.getId(), photo.getStatus(),
-                        best.getFilename(), best.getId(), best.getStatus());
-            }
-        }
-
-        return duplicates;
-    }
-
+    @Transactional
     public Photo addTag(UUID photoId, String tag) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        boolean added = photo.addTag(tag);
-        if (added) {
-            photoRepository.save(photo);
-            String normalizedTag = tag.toLowerCase().trim();
+        String normalizedTag = tag.toLowerCase().trim();
+        if (entity.getTags().add(normalizedTag)) {
+            entity.setUpdatedAt(Instant.now());
+            photoRepository.save(entity);
             eventService.logEvent(photoId, EventType.TAG_ADDED,
-                    "Tag '" + normalizedTag + "' added to " + photo.getFilename());
-            log.info("Tag '{}' added to photo: {} ({})", normalizedTag, photo.getFilename(), photoId);
+                    "Tag '" + normalizedTag + "' added to " + entity.getFilename());
+            log.info("Tag '{}' added to photo: {} ({})", normalizedTag, entity.getFilename(), photoId);
         }
 
-        return photo;
+        return entityToPhoto(entity, null);
     }
 
+    @Transactional
     public Photo removeTag(UUID photoId, String tag) {
-        Photo photo = photoRepository.findById(photoId)
+        PhotoEntity entity = photoRepository.findById(photoId)
                 .orElseThrow(() -> new IllegalArgumentException("Photo not found: " + photoId));
 
-        boolean removed = photo.removeTag(tag);
-        if (removed) {
-            photoRepository.save(photo);
-            String normalizedTag = tag.toLowerCase().trim();
+        String normalizedTag = tag.toLowerCase().trim();
+        if (entity.getTags().remove(normalizedTag)) {
+            entity.setUpdatedAt(Instant.now());
+            photoRepository.save(entity);
             eventService.logEvent(photoId, EventType.TAG_REMOVED,
-                    "Tag '" + normalizedTag + "' removed from " + photo.getFilename());
-            log.info("Tag '{}' removed from photo: {} ({})", normalizedTag, photo.getFilename(), photoId);
+                    "Tag '" + normalizedTag + "' removed from " + entity.getFilename());
+            log.info("Tag '{}' removed from photo: {} ({})", normalizedTag, entity.getFilename(), photoId);
         }
 
-        return photo;
+        return entityToPhoto(entity, null);
     }
 
     public List<Photo> getPhotosByTag(String tag) {
         String normalizedTag = tag.toLowerCase().trim();
-        return photoRepository.findAll().stream()
-                .filter(photo -> photo.getTags() != null && photo.getTags().contains(normalizedTag))
-                .toList();
+        return photoRepository.findByTag(normalizedTag).stream()
+                .map(e -> entityToPhoto(e, null))
+                .collect(Collectors.toList());
+    }
+
+    // Convert entity to domain object
+    private Photo entityToPhoto(PhotoEntity entity, byte[] content) {
+        return Photo.builder()
+                .id(entity.getId())
+                .filename(entity.getFilename())
+                .mimeType(entity.getMimeType())
+                .sizeBytes(entity.getSizeBytes())
+                .content(content)
+                .contentHash(entity.getContentHash())
+                .status(entity.getStatus())
+                .failureReason(entity.getFailureReason())
+                .uploadedAt(entity.getUploadedAt())
+                .updatedAt(entity.getUpdatedAt())
+                .tags(entity.getTags() != null ? new HashSet<>(entity.getTags()) : new HashSet<>())
+                .build();
+    }
+
+    private String computeHash(byte[] content) {
+        try {
+            MessageDigest md = MessageDigest.getInstance("MD5");
+            byte[] hashBytes = md.digest(content);
+            StringBuilder sb = new StringBuilder();
+            for (byte b : hashBytes) {
+                sb.append(String.format("%02x", b));
+            }
+            return sb.toString();
+        } catch (NoSuchAlgorithmException e) {
+            throw new RuntimeException("MD5 algorithm not available", e);
+        }
     }
 }
